# raytracing-hs

./: Makefile  README.md  raytracing-hs.cabal
app/: Main.hs
src/: AABB.hs  BVH.hs  Camera.hs  Color.hs  Dielectric.hs  Intersection.hs  Interval.hs  Lambertian.hs  Material.hs  Metal.hs  Ray.hs  Scene.hs  Shape.hs  Sphere.hs  Vec3.hs
test/: AABBSpec.hs  BVHSpec.hs  CameraSpec.hs  ColorSpec.hs  IntervalSpec.hs  Spec.hs  SphereSpec.hs
