cabal-version:   3.0
name:            raytracing-hs
version:         0.1.0.0
license:         NONE
author:          shota3506
maintainer:      s.shota.710.3506@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable raytracing-hs
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.18.3.0
    hs-source-dirs:   app
    default-language: GHC2021
