cabal-version:   3.0
name:            raytracing-hs
version:         0.1.0.0
license:         NONE
author:          shota3506
maintainer:      s.shota.710.3506@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Vec3, Color, Ray, Shape, Sphere, Scene, Interval, Camera, Material, Lambertian, Metal, Intersection, Dielectric
    hs-source-dirs:   src
    build-depends:    base ^>=4.18.3.0, random
    default-language: GHC2021

executable raytracing-hs
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.18.3.0, random, raytracing-hs
    hs-source-dirs:   app
    default-language: GHC2021

test-suite raytracing-hs-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    other-modules:    SphereSpec, IntervalSpec, ColorSpec, CameraSpec
    hs-source-dirs:   test
    build-depends:    base ^>=4.18.3.0, hspec, raytracing-hs
    default-language: GHC2021
